--- a/index.html
+++ b/index.html
@@ -7,7 +7,227 @@
 	 <title>Untitled</title>	 <meta charset="UTF-8"/>
 
 	 <link rel="stylesheet" href="Facebook.css" type="text/css"/>
+<style>
+	
 
+	
+
+ }
+
+ header {
+
+   font-size: 15px;
+
+   height:52px;
+
+   background-color: #f2f7fd;
+
+	border-bottom: 1px solid #1E90FF;
+
+	border-right: 1px solid white;
+
+	border-left: 1px solid white ;
+
+	border-top: 1px solid white ;
+
+	border-width: 1px;
+
+	margin-left:0%;
+
+	padding: 3px;
+
+	border-sizing: border-box;
+
+}
+
+h2{
+
+	color: #007FFF;
+
+	margin-left: 30%;
+
+}
+
+.box1{
+
+   width: 310px;
+
+   height: 37px;
+
+	margin-bottom: 6px;
+
+	margin-left:4%;
+
+	padding-right: 0px;
+
+	background-color: #F5F5F5;
+
+	border: 1px solid #F5F5F5;
+
+	border-radius: 6px;
+
+	
+
+}
+
+.box2{
+
+  border: 1px solid #F5F5F5;
+
+  background-color:#F5F5F5;
+
+  width: 310px;
+
+  height: 42px;
+
+  margin-top: 4px;
+
+	margin-left: 4%;
+
+	border-radius: 6px;
+
+}
+
+.button1 {
+
+	background-color:#1E90FF;
+
+	border: 2px solid #1E90FF;
+
+	color: white;
+
+	width: 325px;
+
+	height: 37px;
+
+	margin-top: 9px;
+
+	margin-left: 2%;
+
+	border-radius: 7px;
+
+}
+
+.link2{
+
+	color:#007FFF;
+
+	text-decoration: none;
+
+	margin-left: 25%;
+
+	margin-top: 14px;
+
+}
+
+.link1{
+
+	color:#007FFF;
+
+	text-decoration: none;
+
+}
+
+.box11{
+
+   background-color:white;
+
+   border: 1px solid grey;
+
+   margin-left: 12%;
+
+   text-align: center ;
+
+   width: 245px;
+
+   height: 32px;
+
+   border-radius: 5px;
+
+   
+
+	
+
+}
+
+.clr{
+
+	clear: both;
+
+}
+
+.block{
+
+   border: 1px solid white;
+
+  width:130px;
+
+	float: left ;
+
+	box-sizing: border-box;
+
+	padding-left: 35px;
+
+}
+
+.block1{
+
+	border: 1px solid white;
+
+	width: 100px: 
+
+	box-sizing: border-box;
+
+	padding-left: 10px;
+
+	float:left;
+
+	color : grey;
+
+}
+
+p{
+
+	margin: 0px;
+
+}
+
+.tom{
+
+	color: grey;
+
+}
+
+.t{
+
+	color: skyblue;
+
+}
+
+.s {
+
+	margin-left: 10px;
+
+	background-color: White;
+
+	border: 1px solid darkblue ;
+
+}
+
+.r{
+
+	margin-left: 75px;
+
+}
+
+.p{
+
+	color: grey;
+
+	margin-left: 30%;
+
+}
+	 </style>
  </head>
 
 	 <body>
